Header overlapping scrollbar (fixes #8202)

--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -189,6 +189,7 @@ p.n-margin {
     width: 100%;
     border-bottom: 1px solid hsla(0, 0%, 0%, 0.2);
     height: 40px;
+    overflow-x: hidden;
 }
 
 #panels {
